Elastic: Small spacing fix

--- a/skins/elastic/styles/widgets/forms.less
+++ b/skins/elastic/styles/widgets/forms.less
@@ -147,10 +147,6 @@ input.smart-upload {
         }
     }
 
-    .rulerow {
-        margin-bottom: .5rem;
-    }
-
     &.groupped {
         &.readonly {
             legend {
@@ -338,9 +334,10 @@ input.smart-upload {
 
                     &.rowbuttons {
                         text-align: right;
+                        padding-top: 0;
 
                         a {
-                            margin-right: .5rem;
+                            margin-left: .5rem;
 
                             & > span {
                                 display: inline;
